Parameterise repository reference in Dockerfile
This commit parameterises the KeyDB source code repository URL and
branch values in the Dockerfile for improved reusability.

Signed-off-by: Stephanos Ioannidis <root@stephanos.io>

--- a/pkg/docker/Dockerfile
+++ b/pkg/docker/Dockerfile
@@ -23,7 +23,8 @@ RUN set -eux; \
         gosu --version; \
         gosu nobody true
 # build KeyDB
-ARG BRANCH
+ARG REPO=https://github.com/Snapchat/KeyDB.git
+ARG BRANCH=main
 RUN set -eux; \
         \
         savedAptMark="$(apt-mark showmanual)"; \
@@ -47,7 +48,7 @@ RUN set -eux; \
                 libsnappy-dev \
                 libssl-dev \
                 git; \
-        cd /tmp && git clone --branch $BRANCH https://github.com/Snapchat/KeyDB.git --recursive; \
+        cd /tmp && git clone --branch $BRANCH $REPO --recursive; \
         cd /tmp/KeyDB; \
         # disable protected mode as it relates to docker
         grep -E '^ *createBoolConfig[(]"protected-mode",.*, *1 *,.*[)],$' ./src/config.cpp; \
