--- a/deps/Makefile
+++ b/deps/Makefile
@@ -100,12 +100,15 @@ jemalloc: .make-prerequisites
 
 .PHONY: jemalloc
 
+ROCKSDB_CFLAGS= $(CFLAGS)
+ROCKSDB_LDFLAGS= $(LDFLAGS)
+
 rocksdb: .make-prerequisites
 	@printf '%b %b\n' $(MAKECOLOR)MAKE$(ENDCOLOR) $(BINCOLOR)$@$(ENDCOLOR)
 ifeq ($(uname_M),x86_64)
-	cd rocksdb && CFLAGS=-Wno-error PORTABLE=1 $(MAKE) static_lib
+	cd rocksdb && CFLAGS="-Wno-error $(ROCKSDB_CFLAGS)" LDFLAGS="$(ROCKSDB_LDFLAGS)" PORTABLE=1 $(MAKE) static_lib
 else
-	cd rocksdb && PORTABLE=1 $(MAKE) static_lib
+	cd rocksdb && CFLAGS="$(ROCKSDB_CFLAGS)" LDFLAGS="$(ROCKSDB_LDFLAGS)" PORTABLE=1 $(MAKE) static_lib
 endif
 
 .PHONY: rocksdb
